[tool.poetry]
name = "dash-auth0-auth"
version = "0.1.6"
description = "Authenticate your Dash app with Auth0"
authors = ["Daniele Brambilla <daniele.bram@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.13.0"
authlib = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
